# pymacros4py

./: LICENSE  README.html  README.md  README.rst  README.tpl.rst  pyproject.toml  requirements_ci.txt  requirements_dev.txt  setup.py
.github/workflows/: main.yml
src/pymacros4py/: __init__.py  _evaluator.py  _files.py  _global_evaluation_context.py  _pre_processor.py  _template_script.py  _tokenizer.py
tests/: test_pymacros4py.py  test_unit_README.py
tests/data/: diff_templ_and_templ_exp.tpl.py  doc_block_macro_section.py  doc_block_macro_section.script.py  doc_block_macro_section.tpl.py  doc_code_inline_indentation.py  doc_code_inline_indentation.script.py  doc_code_multiline_indentation.py  doc_code_multiline_indentation.script.py  doc_code_multiline_indentation.tpl.py  doc_code_own_line_indentation.script.py  doc_code_own_line_indentation.tpl.py  doc_comment_format.tpl.py  doc_compound_and_indentation.py  doc_compound_and_indentation.script.py  doc_compound_and_indentation.tpl.py  doc_compound_def.py  doc_compound_def.script.py  doc_compound_def.tpl.py  doc_compound_for.py  doc_compound_for.script.py  doc_compound_for.tpl.py  doc_compound_if.py  doc_compound_if.script.py  doc_compound_if.tpl.py  doc_example_consistency_explicit.py  doc_example_consistency_explicit.script.py  doc_example_consistency_explicit.tpl.py  doc_example_consistency_implicit.script.py  doc_example_consistency_implicit.tpl.py  doc_example_inlining.py  doc_example_inlining.script.py  doc_example_inlining.tpl.py  doc_example_license.py  doc_example_license.script.py  (+66 more)
tpl/: LICENSE  README.rst
